git feat 主题浏览界面恢复正常，稍后添加日志文件